--- a/src/modules/ytmusic/style.css
+++ b/src/modules/ytmusic/style.css
@@ -41,7 +41,7 @@ ytmusic-app-layout[is-mweb-modernization-enabled] ytmusic-tab-renderer:has(#lyri
 /* Modern mobile layout font size */
 ytmusic-app-layout[is-mweb-modernization-enabled] .lyrics-plus-integrated .lyrics-line {
     font-size: 34px;
-    --lyplus-font-size-base-grow: 34;
+    --lyplus-font-size-base-grow: 24;
 }
 
 
@@ -246,6 +246,7 @@ div#lyrics-song-progressbar {
     ytmusic-app-layout:not([is-mweb-modernization-enabled])[player-fullscreened]>[slot="player-page"] #side-panel .lyrics-line {
         margin-bottom: .5rem;
         font-size: 4.5rem;
+    --lyplus-font-size-base-grow: 25;
     }
 
     ytmusic-app-layout:not([is-mweb-modernization-enabled])[player-fullscreened]>[slot="player-page"] .lyrics-line:not(.active) .main-vocal-container {
